Attempt at content jump fix and lqip improvement

--- a/components/shared/image.module.scss
+++ b/components/shared/image.module.scss
@@ -12,16 +12,17 @@
     visibility: hidden;
   }
 
-
   :global(.ls-blur-up-img) {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-
     filter: blur(4px);
     opacity: 1;
+
+    &:global(.ls-inview){
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
 
     &:global(.ls-original-loaded){
       opacity: 0;
