--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -1,6 +1,9 @@
+@import "../constants/colors.scss";
+
 .heroVideo {
   display: block;
   width: 100%;
-  max-height: 100vh;
+  height: 85vh;
   object-fit: cover;
+  background-color: $primary-color;
 }
